--- a/Utbk_iOS/Utbk_iOS/ViewControllers/Home/View/Base.lproj/BTTeamHoldTableViewCell.xib
+++ b/Utbk_iOS/Utbk_iOS/ViewControllers/Home/View/Base.lproj/BTTeamHoldTableViewCell.xib
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16097.3" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -176,6 +177,7 @@
             <viewLayoutGuide key="safeArea" id="aW0-zy-SZf"/>
             <connections>
                 <outlet property="address" destination="ZiF-qO-gEx" id="H1L-hI-1qR"/>
+                <outlet property="addressTitle" destination="CfH-B7-5aB" id="f34-9u-Rwz"/>
                 <outlet property="communityHold" destination="5F9-4X-Pv5" id="rRB-Gl-js9"/>
                 <outlet property="personalHold" destination="ikx-Vm-RaG" id="nO7-tL-RoF"/>
                 <outlet property="regionHold" destination="IrM-e2-9bF" id="0pN-S5-RGl"/>
