--- a/Utbk_iOS/Utbk_iOS/ViewControllers/Trading/views/marketCell.xib
+++ b/Utbk_iOS/Utbk_iOS/ViewControllers/Trading/views/marketCell.xib
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
-    <device id="retina4_7" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16097.3" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -15,7 +13,7 @@
             <rect key="frame" x="0.0" y="0.0" width="486" height="50"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="486" height="49.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="486" height="50"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="BTC" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="71U-xP-STy">
@@ -28,7 +26,7 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="$3000.00" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JZn-Dc-IKa">
-                        <rect key="frame" x="192.5" y="11" width="71.5" height="18"/>
+                        <rect key="frame" x="135" y="11" width="71.5" height="18"/>
                         <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="15"/>
                         <color key="textColor" red="0.59999999999999998" green="0.59999999999999998" blue="0.59999999999999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <nil key="highlightedColor"/>
@@ -69,8 +67,8 @@
                         <color key="textColor" red="0.59999999999999998" green="0.59999999999999998" blue="0.59999999999999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="24h" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ITn-cq-S1d">
-                        <rect key="frame" x="218.5" y="30" width="19.5" height="17"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="24h" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ITn-cq-S1d">
+                        <rect key="frame" x="135" y="30" width="19.5" height="17"/>
                         <fontDescription key="fontDescription" name="PingFangSC-Medium" family="PingFang SC" pointSize="11"/>
                         <color key="textColor" red="0.59999999999999998" green="0.59999999999999998" blue="0.59999999999999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <nil key="highlightedColor"/>
@@ -84,10 +82,10 @@
                     <constraint firstItem="71U-xP-STy" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="15" id="6Oe-JY-qb2"/>
                     <constraint firstItem="acg-L5-ChS" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="AW2-Or-5es"/>
                     <constraint firstItem="ITn-cq-S1d" firstAttribute="top" secondItem="COh-zG-JKo" secondAttribute="top" id="Exq-c2-YEd"/>
-                    <constraint firstItem="JZn-Dc-IKa" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" constant="-15" id="eXm-Hc-toU"/>
+                    <constraint firstItem="ITn-cq-S1d" firstAttribute="leading" secondItem="JZn-Dc-IKa" secondAttribute="leading" id="KTl-so-e41"/>
+                    <constraint firstItem="JZn-Dc-IKa" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="120" id="Tid-9B-4iN"/>
                     <constraint firstItem="ITn-cq-S1d" firstAttribute="bottom" secondItem="COh-zG-JKo" secondAttribute="bottom" id="elX-m0-DCE"/>
                     <constraint firstItem="JZn-Dc-IKa" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" constant="-5" id="gt8-zz-WNH"/>
-                    <constraint firstItem="ITn-cq-S1d" firstAttribute="centerX" secondItem="JZn-Dc-IKa" secondAttribute="centerX" id="hpk-9M-kTf"/>
                     <constraint firstItem="HuF-Dn-Y6L" firstAttribute="bottom" secondItem="71U-xP-STy" secondAttribute="bottom" constant="-1.5" id="lLT-Pg-58G"/>
                     <constraint firstItem="COh-zG-JKo" firstAttribute="top" secondItem="71U-xP-STy" secondAttribute="bottom" id="lfp-40-7h0"/>
                     <constraint firstItem="JZn-Dc-IKa" firstAttribute="centerY" secondItem="71U-xP-STy" secondAttribute="centerY" id="rYf-qm-LBg"/>
