--- a/Utbk_iOS/Utbk_iOS/ViewControllers/Profile/WalletManager/Base.lproj/BTPayPasswordVC.xib
+++ b/Utbk_iOS/Utbk_iOS/ViewControllers/Profile/WalletManager/Base.lproj/BTPayPasswordVC.xib
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16097.3" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -20,7 +21,7 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="HSA-54-eU5">
-                    <rect key="frame" x="12" y="64" width="390" height="170"/>
+                    <rect key="frame" x="12" y="64" width="390" height="149"/>
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="请输入新密码" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="V9e-kt-L8e">
                             <rect key="frame" x="11" y="21" width="86" height="17"/>
@@ -112,7 +113,7 @@
                         <constraint firstItem="y9x-2l-ySS" firstAttribute="leading" secondItem="pyk-R7-egH" secondAttribute="trailing" constant="15" id="dHs-BG-dbG"/>
                         <constraint firstItem="xA0-rp-N3q" firstAttribute="leading" secondItem="V9e-kt-L8e" secondAttribute="leading" id="dLm-rj-PCC"/>
                         <constraint firstItem="dWd-jT-D0b" firstAttribute="top" secondItem="xA0-rp-N3q" secondAttribute="bottom" constant="21" id="hwx-nE-VPY"/>
-                        <constraint firstAttribute="bottom" secondItem="KpZ-BO-WCn" secondAttribute="bottom" constant="31" id="pSB-ba-eGJ"/>
+                        <constraint firstAttribute="bottom" secondItem="KpZ-BO-WCn" secondAttribute="bottom" constant="10" id="pSB-ba-eGJ"/>
                         <constraint firstItem="xA0-rp-N3q" firstAttribute="centerX" secondItem="HSA-54-eU5" secondAttribute="centerX" id="vgH-eW-fny"/>
                         <constraint firstAttribute="trailing" secondItem="gIy-Uf-AqN" secondAttribute="trailing" constant="11" id="ycy-vn-cOj"/>
                         <constraint firstItem="V9e-kt-L8e" firstAttribute="leading" secondItem="HSA-54-eU5" secondAttribute="leading" constant="11" id="ysI-xF-usu"/>
@@ -124,7 +125,7 @@
                     </userDefinedRuntimeAttributes>
                 </view>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Xae-VC-2Kw">
-                    <rect key="frame" x="48" y="331" width="318" height="44"/>
+                    <rect key="frame" x="48" y="310" width="318" height="44"/>
                     <color key="backgroundColor" red="0.80000000000000004" green="0.80000000000000004" blue="0.80000000000000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="44" id="e93-ek-qo8"/>
@@ -141,7 +142,7 @@
                     </connections>
                 </button>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="x5E-cL-cSl">
-                    <rect key="frame" x="24" y="244" width="366" height="37"/>
+                    <rect key="frame" x="24" y="223" width="366" height="37"/>
                     <attributedString key="attributedText">
                         <fragment content="温馨提示：请牢记您的交易密码，如果遗忘将无法回，将无法提现账户资产，请慎重！！！   ">
                             <attributes>
