--- a/Utbk_iOS/Utbk_iOS/ViewControllers/Profile/Base.lproj/BTShareSecondVC.xib
+++ b/Utbk_iOS/Utbk_iOS/ViewControllers/Profile/Base.lproj/BTShareSecondVC.xib
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16097.3" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -22,14 +23,14 @@
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Gf3-Ha-6de">
                     <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                     <subviews>
-                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icon_shareSecondBg" translatesAutoresizingMaskIntoConstraints="NO" id="PbC-wj-paM">
+                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="start" translatesAutoresizingMaskIntoConstraints="NO" id="PbC-wj-paM">
                             <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         </imageView>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ATD-YN-r7N">
-                            <rect key="frame" x="127" y="535" width="160" height="160"/>
+                            <rect key="frame" x="134.5" y="555" width="145" height="145"/>
                             <subviews>
                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="O5O-Wt-VpZ">
-                                    <rect key="frame" x="21" y="24" width="118" height="118"/>
+                                    <rect key="frame" x="21" y="24" width="103" height="103"/>
                                     <constraints>
                                         <constraint firstAttribute="width" secondItem="O5O-Wt-VpZ" secondAttribute="height" multiplier="1:1" id="mIK-TN-a2l"/>
                                     </constraints>
@@ -37,7 +38,7 @@
                             </subviews>
                             <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                             <constraints>
-                                <constraint firstAttribute="width" constant="160" id="0cN-33-A7M"/>
+                                <constraint firstAttribute="width" constant="145" id="0cN-33-A7M"/>
                                 <constraint firstItem="O5O-Wt-VpZ" firstAttribute="leading" secondItem="ATD-YN-r7N" secondAttribute="leading" constant="21" id="FQm-qc-Wco"/>
                                 <constraint firstItem="O5O-Wt-VpZ" firstAttribute="centerX" secondItem="ATD-YN-r7N" secondAttribute="centerX" id="R1j-y5-T6X"/>
                                 <constraint firstItem="O5O-Wt-VpZ" firstAttribute="top" secondItem="ATD-YN-r7N" secondAttribute="top" constant="24" id="mqD-GW-e63"/>
@@ -207,7 +208,7 @@
             </subviews>
             <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
             <constraints>
-                <constraint firstItem="Oyl-Dc-o2y" firstAttribute="top" secondItem="ATD-YN-r7N" secondAttribute="bottom" constant="10" id="1zx-kl-ccX"/>
+                <constraint firstItem="Oyl-Dc-o2y" firstAttribute="top" secondItem="ATD-YN-r7N" secondAttribute="bottom" constant="5" id="1zx-kl-ccX"/>
                 <constraint firstItem="Gf3-Ha-6de" firstAttribute="trailing" secondItem="Q5M-cg-NOt" secondAttribute="trailing" id="Bwc-gM-3Zu"/>
                 <constraint firstItem="Oyl-Dc-o2y" firstAttribute="leading" secondItem="Q5M-cg-NOt" secondAttribute="leading" id="TXi-rC-KNV"/>
                 <constraint firstItem="Gf3-Ha-6de" firstAttribute="leading" secondItem="Q5M-cg-NOt" secondAttribute="leading" id="Us8-b8-LNM"/>
@@ -223,8 +224,8 @@
     <resources>
         <image name="icon_shareCopy" width="41" height="41"/>
         <image name="icon_shareNote" width="40" height="40"/>
-        <image name="icon_shareSecondBg" width="1242" height="2688"/>
         <image name="icon_shareWeChat" width="40" height="40"/>
         <image name="icon_sharefriendscircle" width="41" height="41"/>
+        <image name="start" width="1242" height="2688"/>
     </resources>
 </document>
