--- a/Utbk_iOS/Utbk_iOS/ViewControllers/Profile/WalletManager/Base.lproj/BTModifyTradePasswordVC.xib
+++ b/Utbk_iOS/Utbk_iOS/ViewControllers/Profile/WalletManager/Base.lproj/BTModifyTradePasswordVC.xib
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16097.3" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -56,7 +57,7 @@
                     </userDefinedRuntimeAttributes>
                 </view>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="f8i-ig-gdo">
-                    <rect key="frame" x="12" y="167" width="390" height="170"/>
+                    <rect key="frame" x="12" y="167" width="390" height="149"/>
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="请输入新密码" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="d0e-pi-dar">
                             <rect key="frame" x="11" y="21" width="86" height="17"/>
@@ -140,7 +141,7 @@
                         <constraint firstItem="0ik-JQ-Wqr" firstAttribute="top" secondItem="ozN-CN-9pT" secondAttribute="bottom" constant="10" id="4Yv-vk-dhl"/>
                         <constraint firstItem="uSL-oC-P5p" firstAttribute="centerY" secondItem="0ik-JQ-Wqr" secondAttribute="centerY" id="8Ia-4I-D1f"/>
                         <constraint firstItem="oXp-8d-WD4" firstAttribute="leading" secondItem="MnD-Uh-ux0" secondAttribute="trailing" constant="15" id="9S5-HZ-DwV"/>
-                        <constraint firstAttribute="bottom" secondItem="0ik-JQ-Wqr" secondAttribute="bottom" constant="31" id="Axg-ED-QJh"/>
+                        <constraint firstAttribute="bottom" secondItem="0ik-JQ-Wqr" secondAttribute="bottom" constant="10" id="Axg-ED-QJh"/>
                         <constraint firstItem="0ik-JQ-Wqr" firstAttribute="leading" secondItem="ozN-CN-9pT" secondAttribute="leading" id="DVJ-OW-uSB"/>
                         <constraint firstItem="7eb-Jy-JNe" firstAttribute="top" secondItem="d0e-pi-dar" secondAttribute="bottom" constant="10" id="EUI-30-L6R"/>
                         <constraint firstItem="vvo-5Q-RDh" firstAttribute="leading" secondItem="0ik-JQ-Wqr" secondAttribute="trailing" constant="15" id="Fn6-6A-DBw"/>
@@ -166,12 +167,12 @@
                     </userDefinedRuntimeAttributes>
                 </view>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="温馨提示：请牢记您的提币密码，如果遗忘将无法找回，将无法提现账户资产，请慎重！！" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="r5k-Ua-GZz">
-                    <rect key="frame" x="24" y="347" width="366" height="29"/>
+                    <rect key="frame" x="24" y="326" width="366" height="29"/>
                     <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="12"/>
                     <color key="textColor" red="0.6588235294117647" green="0.52549019607843139" blue="0.3529411764705882" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                 </label>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oGy-Ei-Prx">
-                    <rect key="frame" x="39" y="426" width="336" height="44"/>
+                    <rect key="frame" x="39" y="405" width="336" height="44"/>
                     <color key="backgroundColor" red="0.80000000000000004" green="0.80000000000000004" blue="0.80000000000000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="44" id="YQ5-Ds-arG"/>
